Increase memory of cargo plugin